# beamburst

./: .gitignore  CMakeLists.txt  README.md  image.h  pngtest.cc  todo.txt
resources/: render_times.txt
scripts/: scene_generator.py
src/: array_ops.h  camera.cc  camera.h  color.cc  color.h  image.cc  image.h  light_graph.cc  light_graph.h  lighting.cc  lighting.h  linear_types.h  material.h  matrix.cc  matrix.h  path_tree.cc  path_tree.h  plane.h  pngtest.cc  texture.cc  texture.h  vector_ops.cc  vector_ops.h
src/geometry/: aabb.cc  aabb.h  bvh.cc  bvh.h  intersectable.cc  intersectable.h  intersections.cc  intersections.h  line.cc  line.h  plane.cc  plane.h  sphere.cc  sphere.h  triangle.cc  triangle.h  triangle_bounding_volume.cc  triangle_bounding_volume.h
src/geometry/multitudes/: bvh.cc  bvh.h
src/geometry/primitives/: plane.cc  plane.h  sphere.cc  sphere.h  triangle.cc  triangle.h
src/linear_algebra/: array_ops.h  cmath_extention.cc  coordinates.h  linear_types.h  matrix.cc  matrix.h  vector_ops.cc
src/math/: array_ops.h  cmath_extention.h  coordinates.cc  coordinates.h  matrix.cc  transformations.h  vector_ops.h
src/parsing/: parser.cc  parser.h
tests/: CMakeLists.txt  array_2d_ops.cc  array_ops.cc  bubble_test.cc  camera_test.cc  cow_reflect_refract_test.cc  cow_test.cc  cube_test.cc  cube_texture_test.cc  lighting_test.cc  matrix.cc  pngtest.cc  reflect_refract_test.cc  sphere_texture_test.cc  spheres_example.cc  texture_test.cc  vector_ops.cc
tests/geometry/: aabb.cc  intersections.cc
tests/linear_algebra/: array_2d_ops.cc  matrix.cc  transformations.cc  vector_ops.cc
tests/math/: array_ops.cc  transformations.cc
tests/parsing/: basic_obj_parse.cc
